--- a/miOrder.html
+++ b/miOrder.html
@@ -86,6 +86,12 @@
             margin-bottom: 20px;
             align-items: center;
         }
+        @media (max-width: 640px) {
+           .title{
+            display: none;
+            }
+               
+        }
     </style>
 </head>
 <body>
