--- a/myOrdes.html
+++ b/myOrdes.html
@@ -28,16 +28,17 @@
             width: 100%;
             height: 100vh;
             display: grid;
-            place-items: center;
+            justify-items: center;
         }
         .title{
-           font-size: var(--lg); 
-           margin-bottom: 40px;
+            display: none;
+            font-size: var(--lg); 
+            margin-bottom: 40px;
         }
         .my-order-container{
             display: grid; 
             grid-template-rows: 1fr auto;
-            width: 350px;
+            width: 300px;
         }
         .my-order-content{
             display: flex;
@@ -70,18 +71,16 @@
         {
             margin: 0 20px;
         }
-        @media (max-width: 640px) {
-            /* .my-order{
-            justify-items: center;
-            } */
+        @media (min-width: 640px) {
+            .my-order{
+            place-items: center;
+            }
             .my-order-container{
-                width: 300px;
-                
+                width: 350px;  
             }
             .title{
-             display: none;
-             }
-               
+             display: block;
+             }      
         }
     </style>
 </head>
