Incrementando pantallas de compras de carrito

--- a/navbar.html
+++ b/navbar.html
@@ -95,6 +95,9 @@
             width: 25px;
             height: 25px;
         }
+        .shopping-cart:hover{
+           cursor: pointer;
+        }
         .navbar-right .navbar-email{
             font-size: var(--sm);
         }
